[package]
name = "jerry"
version = "0.1.0"
edition = "2021"
description = "Shallow multithreaded web server"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
clap = "3.1.6"
env_logger = "0.9.0"
log = "0.4.0"
